@@ -1,30 +1,33 @@
-package queue;
 
-import java.util.Vector;
+/**
+ * Class Stack , with the initialize compacity 10. based on Vector
+ * version:2.0 18th Nov
+ * @author Yanfang Guo <yanfguo@outlook.com> <yanfguo@vub.ac.be>
+ */
 
-public class Queue {
-	private Vector data;
+public class Queue<E> {
+	private Vector<E> data;
 
 	public Queue() {
 		// TODO Auto-generated constructor stub
-		data = new Vector();
+		data = new Vector<E>();
 	}
 	
-	public void push(Object o) {
-		data.add(o);
+	public void push(E o) {
+		data.addFirst(o);
 	}
 	
-	public Object pop() {
-		Object t = data.get(0);
+	public E pop() {
+		E t = data.get(0);
 		for (int i = 0; i < data.size()-1; i++) {
 			data.set(i, data.get(i+1));
 		}
-		data.remove(data.size()-1);
+		data.removeLast();
 		return t;
 		
 	}
 	
-	public Object top() {
+	public E top() {
 		return data.get(0);
 	}
 	
