@@ -1,38 +1,39 @@
-package stacks;
-
-import java.util.Vector;
-
-public class Stack {
+/**
+ * Class Stack , with the initialize compacity 10. based on Vector
+ * version:2.0 18th Nov
+ * @author Yanfang Guo <yanfguo@outlook.com> <yanfguo@vub.ac.be>
+ */
+public class Stack <E>{
 	
-	private Vector data;
+	private Vector <E>data;
+	private int compacity = 10;
 
 	public Stack() {
 		// TODO Auto-generated constructor stub
-		data = new Vector();
+
+		data = new Vector<E>(compacity);
 	}
 	
-	public void push(Object o){
-		data.addElement(o);
+	public void push(E o){
+		data.addFirst(o);
 	}
 	
-	public Object pop(){
-		Object t = data.lastElement();
-		data.remove(data.size()-1);
+	public E pop(){
+		E t = data.getLast();
+		data.removeLast();
 		return t;
 	}
 	
-	public Object top() {
-		return data.lastElement();
+	public E top() {
+		return data.getLast();
 	}
 	
 	public int size() {
 		return data.size();
 	}
 	
-	private boolean empty() {
+	private boolean isEmpty() {
 		return data.isEmpty();
 	}
-	
-	
 
 }
